--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
     </main>
     
-<h2>© 2025 Distributorcheat. All rights reserved.</h2>
+<h2>2025 Distributorcheat.</h2>
         </div>
       </div>
 
