--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
         <div class="left">
             <h2 class="hello-text">Welcome</h2>
-            <h1 class="name-text">DISTRIBUTOR HACK GAME</h1>
+            <h1 class="name-text">DISTRIBUTOR GAME</h1>
             <h2 class="role-text">
                 <span>CHEAT iOS</span>
                 <span>CHEAT ANDROID</span>
@@ -45,7 +45,13 @@
                 <button class="Website-List-Cheat">Website List Cheat</button>
             </div>
         </div>
-
+        
+        <div class="col-xl-2 col-md-4">
+          <div class="icon-box">
+            <i class="bi bi-instagram"></i>
+            <h3><a href="https://bit.ly/3CqWIgb" target="_blank" rel="noopener noreferrer">Instagram</a></h3>
+          </div>
+        </div>
         <section class="right">
             <img class="blob-img" src="blob.png">
             <img class="rocket-img" src="rocket.png">
